[package]
name = "solar_inverter"
version = "0.1.0"
authors = ["Orange_Murker"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
hal = { package = "esp32-hal", version = "0.18.0", features = ["eh1"]}
esp-backtrace = { version = "0.10.0", features = ["esp32", "panic-handler", "exception-handler", "print-uart"] }
esp-println = { version = "0.8.0", features = ["esp32"] }
# log = { version = "0.4.18" }
embedded-hal = "1.0.0"
idsp = "0.14.1"
fugit = "0.3.7"
critical-section = "1.1.2"
micromath = "2.1.0"
sogi_pll = "0.2.0"
ads1x1x = "0.2.2"
